--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\ryann\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=C:/Users/ryann/Downloads/apache-tomcat-10.1.42-windows-x64/apache-tomcat-10.1.42
-j2ee.server.instance=tomcat101:home=C:\\Users\\ryann\\Downloads\\apache-tomcat-10.1.42-windows-x64\\apache-tomcat-10.1.42
+deploy.ant.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\22\\tomcat101.properties
+j2ee.server.home=C:/Users/ASUS/apache-tomcat-10.1.41/apache-tomcat-10.1.41
+j2ee.server.instance=tomcat101:home=C:\\Users\\ASUS\\apache-tomcat-10.1.41\\apache-tomcat-10.1.41
+javac.debug=true
+javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\ryann\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\ASUS\\AppData\\Roaming\\NetBeans\\22\\build.properties
