--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,29 +25,30 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.16.0.jar=D:\\HexTech_DuyHung\\Jar_payment\\Jar_payment\\commons-codec-1.16.0.jar
-file.reference.commons-logging-1.2.jar=lib/google/commons-logging-1.2.jar
-file.reference.fluent-hc-4.5.5.jar=lib/google/fluent-hc-4.5.5.jar
-file.reference.gson-2.8.2.jar=lib/google/gson-2.8.2.jar
-file.reference.httpclient-4.5.5.jar=lib/google/httpclient-4.5.5.jar
-file.reference.httpclient5-5.1.4.jar=D:\\HexTech_DuyHung\\Jar_payment\\Jar_payment\\httpclient5-5.1.4.jar
-file.reference.httpclient5-5.1.4__1_.jar=D:\\HexTech_DuyHung\\Jar_payment\\Jar_payment\\httpclient5-5.1.4 (1).jar
-file.reference.httpcore-4.4.9.jar=lib/google/httpcore-4.4.9.jar
-file.reference.httpcore5-5.1.4.jar=D:\\HexTech_DuyHung\\Jar_payment\\Jar_payment\\httpcore5-5.1.4.jar
-file.reference.httpcore5-5.1.4__1_.jar=D:\\HexTech_DuyHung\\Jar_payment\\Jar_payment\\httpcore5-5.1.4 (1).jar
-file.reference.jackson-annotations-2.15.3.jar=D:\\HexTech_DuyHung\\Jar_payment\\Jar_payment\\jackson-annotations-2.15.3.jar
-file.reference.jackson-core-2.15.3.jar=D:\\HexTech_DuyHung\\Jar_payment\\Jar_payment\\jackson-core-2.15.3.jar
-file.reference.jackson-databind-2.15.3.jar=D:\\HexTech_DuyHung\\Jar_payment\\Jar_payment\\jackson-databind-2.15.3.jar
+file.reference.commons-codec-1.16.0.jar=C:\\Users\\ASUS\\Downloads\\commons-codec-1.16.0.jar
+file.reference.commons-logging-1.2.jar=lib\\google\\commons-logging-1.2.jar
+file.reference.fluent-hc-4.5.5.jar=lib\\google\\fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=lib\\google\\gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=lib\\google\\httpclient-4.5.5.jar
+file.reference.httpclient5-5.1.4.jar=C:\\Users\\ASUS\\Downloads\\httpclient5-5.1.4.jar
+file.reference.httpclient5-5.1.4__1_.jar=C:\\Users\\ASUS\\Downloads\\httpclient5-5.1.4 (1).jar
+file.reference.httpcore-4.4.9.jar=lib\\google\\httpcore-4.4.9.jar
+file.reference.httpcore5-5.1.4.jar=C:\\Users\\ASUS\\Downloads\\httpcore5-5.1.4.jar
+file.reference.httpcore5-5.1.4__1_.jar=C:\\Users\\ASUS\\Downloads\\httpcore5-5.1.4 (1).jar
+file.reference.jackson-annotations-2.15.3.jar=C:\\Users\\ASUS\\Downloads\\jackson-annotations-2.15.3.jar
+file.reference.jackson-core-2.15.3.jar=C:\\Users\\ASUS\\Downloads\\jackson-core-2.15.3.jar
+file.reference.jackson-databind-2.15.3.jar=C:\\Users\\ASUS\\Downloads\\jackson-databind-2.15.3.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0__2_.jar=lib/jakarta.servlet.jsp.jstl-2.0.0 (2).jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0__2_.jar=lib/jakarta.servlet.jsp.jstl-api-2.0.0 (2).jar
-file.reference.javax.activation-1.2.0.jar=lib/email/javax.activation-1.2.0.jar
-file.reference.javax.mail.jar=lib/email/javax.mail.jar
-file.reference.json-20240303.jar=D:\\HexTech_DuyHung\\Jar_payment\\Jar_payment\\json-20240303.jar
+file.reference.javax.activation-1.2.0.jar=lib\\email\\javax.activation-1.2.0.jar
+file.reference.javax.mail.jar=lib\\email\\javax.mail.jar
+file.reference.json-20240303.jar=C:\\Users\\ASUS\\Downloads\\json-20240303.jar
 file.reference.mssql-jdbc-12.6.1.jre11.jar=lib/mssql-jdbc-12.6.1.jre11.jar
-file.reference.payos-java-1.0.3.jar=D:\\HexTech_DuyHung\\Jar_payment\\Jar_payment\\payos-java-1.0.3.jar
-file.reference.slf4j-api-1.7.36.jar=D:\\HexTech_DuyHung\\Jar_payment\\Jar_payment\\slf4j-api-1.7.36.jar
-file.reference.slf4j-simple-1.7.36.jar=D:\\HexTech_DuyHung\\Jar_payment\\Jar_payment\\slf4j-simple-1.7.36.jar
+file.reference.payos-java-1.0.3.jar=C:\\Users\\ASUS\\Downloads\\payos-java-1.0.3.jar
+file.reference.slf4j-api-1.7.36.jar=C:\\Users\\ASUS\\Downloads\\slf4j-api-1.7.36.jar
+file.reference.slf4j-simple-1.7.36.jar=C:\\Users\\ASUS\\Downloads\\slf4j-simple-1.7.36.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -67,16 +68,16 @@ javac.classpath=\
     ${file.reference.httpcore-4.4.9.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.javax.activation-1.2.0.jar}:\
+    ${file.reference.json-20240303.jar}:\
     ${file.reference.commons-codec-1.16.0.jar}:\
-    ${file.reference.httpclient5-5.1.4__1_.jar}:\
+    ${file.reference.payos-java-1.0.3.jar}:\
     ${file.reference.httpclient5-5.1.4.jar}:\
-    ${file.reference.httpcore5-5.1.4__1_.jar}:\
     ${file.reference.httpcore5-5.1.4.jar}:\
+    ${file.reference.httpclient5-5.1.4__1_.jar}:\
+    ${file.reference.httpcore5-5.1.4__1_.jar}:\
     ${file.reference.jackson-annotations-2.15.3.jar}:\
     ${file.reference.jackson-core-2.15.3.jar}:\
     ${file.reference.jackson-databind-2.15.3.jar}:\
-    ${file.reference.json-20240303.jar}:\
-    ${file.reference.payos-java-1.0.3.jar}:\
     ${file.reference.slf4j-api-1.7.36.jar}:\
     ${file.reference.slf4j-simple-1.7.36.jar}
 # Space-separated list of extra javac options
@@ -85,8 +86,8 @@ javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=21
+javac.target=21
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -105,7 +106,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -121,6 +121,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=HexTacos.war
+war.name=HexTech77.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
